; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_671.c_find_gamever.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_671.c_find_gamever.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"gamever\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @find_gamever(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i32 -1, i32* %6, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  store i32* %12, i32** %8, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 5
  store i32* %14, i32** %3, align 8
  br label %15

15:                                               ; preds = %49, %2
  %16 = load i32*, i32** %3, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = icmp ult i32* %16, %17
  br i1 %18, label %19, label %52

19:                                               ; preds = %15
  %20 = load i32*, i32** %3, align 8
  %21 = call i32* @strchr(i32* %20, i32 0)
  store i32* %21, i32** %7, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %25, label %24

24:                                               ; preds = %19
  br label %52

25:                                               ; preds = %19
  %26 = load i32*, i32** %7, align 8
  store i32 0, i32* %26, align 4
  %27 = load i32, i32* %5, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %42, label %29

29:                                               ; preds = %25
  %30 = load i32*, i32** %3, align 8
  %31 = load i32, i32* %30, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %34, label %33

33:                                               ; preds = %29
  br label %52

34:                                               ; preds = %29
  %35 = load i32*, i32** %3, align 8
  %36 = call i32 @strcmp(i32* %35, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %39, label %38

38:                                               ; preds = %34
  store i32 0, i32* %6, align 4
  br label %39

39:                                               ; preds = %38, %34
  %40 = load i32, i32* %5, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %5, align 4
  br label %49

42:                                               ; preds = %25
  %43 = load i32, i32* %6, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %48, label %45

45:                                               ; preds = %42
  %46 = load i32*, i32** %3, align 8
  %47 = call i32 @atoi(i32* %46)
  store i32 %47, i32* %6, align 4
  br label %48

48:                                               ; preds = %45, %42
  store i32 0, i32* %5, align 4
  br label %49

49:                                               ; preds = %48, %39
  %50 = load i32*, i32** %7, align 8
  %51 = getelementptr inbounds i32, i32* %50, i64 1
  store i32* %51, i32** %3, align 8
  br label %15

52:                                               ; preds = %33, %24, %15
  %53 = load i32, i32* %6, align 4
  ret i32 %53
}

declare dso_local i32* @strchr(i32*, i32) #1

declare dso_local i32 @strcmp(i32*, i8*) #1

declare dso_local i32 @atoi(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
